# unicorn-currency-quotation-api

./:  .env.example   CONTRIBUTING.md  .coafile  .deepsource.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CITATION.bib  Dockerfile  README.md  SECURITY.md  configuration.py  docker-compose-test.yaml  docker-compose.debug.yml  docker-compose.deploy.yml  docker-compose.yaml  docker-compose.yml  noderun.sh  package-lock.json  package.json  pre-commit.sh  requirements.txt  run.sh  setup.cfg
.circleci/: config.yml
.github/: FUNDING.yml
.husky/: pre-commit
api/: __init__.py  api_request.py  app.py  currency_quotation.py  data_formatter.py  main.py  models.py  my_app.db
config/: Makefile  __init__.py  config.py  dev_config.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/controllers/: cotacao_controller.py
src/models/: __init__.py  cotacao.py  provider_interfaces.py
src/services/: __init__.py  cotacao_service.py  presenter_interfaces.py
src/utils/: constants.py
test/: test_api_request.py  test_currency_quotation.py  test_data_formatter.py  test_main.py
