[metadata]
name = cotacao-dolar
version = 1.0.0
description = Projeto para consumir API de cotação de moedas
author = Seu Nome
author_email = seu.email@example.com
url = https://github.com/seu_usuario/cotacao-dolar
license = MIT

[options]
packages = find:
install_requires =
    Flask
    requests
    python-dotenv
    pytest

[options.packages.find]
where = src
